@@ -38,4 +38,9 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs(
+        "-javaagent:${configurations.testRuntimeClasspath.find { it.name.startsWith('byte-buddy-agent') }}",
+        "-XX:+EnableDynamicAgentLoading",
+        "-Xshare:off"
+    )
 }
